--- a/.github/workflows/generate-list.yml
+++ b/.github/workflows/generate-list.yml
@@ -19,6 +19,10 @@ jobs:
     - name: Add MSBuild to PATH
       uses: microsoft/setup-msbuild@v1.0.2
 
+    - name: Restore Nuget
+      working-directory: ${{env.GITHUB_WORKSPACE}}
+      run: nuget restore ${{env.SOLUTION_FILE_PATH}}
+
     - name: Download Neos
       shell: pwsh
       run: |
