--- a/.github/workflows/generate-list.yml
+++ b/.github/workflows/generate-list.yml
@@ -21,7 +21,7 @@ jobs:
 
     - name: Restore Nuget
       working-directory: ${{env.GITHUB_WORKSPACE}}
-      run: nuget restore ${{env.SOLUTION_FILE_PATH}}
+      run: nuget restore
 
     - name: Download Neos
       shell: pwsh
