--- a/.github/workflows/generate-list.yml
+++ b/.github/workflows/generate-list.yml
@@ -39,7 +39,7 @@ jobs:
       working-directory: ${{env.GITHUB_WORKSPACE}}
       # Add additional options to the MSBuild command line here (like platform or verbosity level).
       # See https://docs.microsoft.com/visualstudio/msbuild/msbuild-command-line-reference
-      run: msbuild NeosTypeParser.csproj /p:Configuration=Release
+      run: msbuild NeosTypeParser.csproj -restore
 
     # Commits the changes to the repo.
     - name: Commit
