--- a/.github/workflows/generate-list.yml
+++ b/.github/workflows/generate-list.yml
@@ -24,8 +24,7 @@ jobs:
         $web = [System.Net.WebClient]::new()
         $web.DownloadFile("https://www.7-zip.org/a/7zr.exe","$PWD\7zr.exe")
         $cvstring = $web.DownloadString('https://cloudxstorage.blob.core.windows.net/install/Pro/Public')
-        $web.DownloadFile("https://assets.neos.com/install/Pro/Data/$cvstring.7z","$env:TEMP\neosupdate.7z")
-        .\7zr x -y "$env:TEMP\neosupdate.7z" *
+        $web.DownloadFile("https://assets.neos.com/install/Pro/Data/$cvstring.7z","$env:TEMP\neosupdate.7z") .\7zr.exe x -y "$env:TEMP\neosupdate.7z" *
         Remove-Item "$env:TEMP\neosupdate.7z"
 
     # Sets up .NET Core 6.0.x
