If this doesn't do it, I'm switching actions

--- a/.github/workflows/generate-list.yml
+++ b/.github/workflows/generate-list.yml
@@ -28,7 +28,7 @@ jobs:
     - name: action-zip
       uses: montudor/action-zip@v1.0.0
       with:
-        args: unzip -qq .\neosupdate.7z
+        args: unzip -qq neosupdate.7z
 
     # Sets up .NET Core 6.0.x
     - name: Setup .NET Core SDK 6.0.x
