--- a/.github/workflows/generate-list.yml
+++ b/.github/workflows/generate-list.yml
@@ -11,34 +11,40 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3.0.2
+      # Lets get SteamCMD downloaded.
+    - name: Install SteamCMD
+      # Check for a Resonite cache
+      uses: CyberAndrii/setup-steamcmd@v1
 
-    - name: Download Neos
-      shell: pwsh
+      # And now to download Resonite.
+    - name: Install Resonite
+      # Check for a Resonite cache
+      run: steamcmd +force_install_dir $HOME/Steam/steamapps/common/Resonite +login ${{ secrets.PASSCODE }} +app_update 2519830 validate +quit
+
+    # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it.
+    - name: Checkout
+      uses: actions/checkout@v3
+
+    # Moves our custom cs file into the correct location.
+    - name: Move Scripts
       run: |
-        New-Item -Type Directory NeosVR
-        cd NeosVR
-        $web = [System.Net.WebClient]::new()
-        $cvstring = $web.DownloadString('https://cloudxstorage.blob.core.windows.net/install/Pro/Public')
-        $web.DownloadFile("https://assets.neos.com/install/Pro/Data/$cvstring.7z","$GITHUB_WORKSPACE\neosupdate.7z")
-
-    - name: action-zip
-      uses: montudor/action-zip@v1.0.0
-      with:
-        args: unzip -qq neosupdate.7z
-
-    # Sets up .NET Core 6.0.x
-    - name: Setup .NET Core SDK 6.0.x
-      uses: actions/setup-dotnet@v2
-      with:
-        dotnet-version: '6.0.x'
+        mv $GITHUB_WORKSPACE/script/FrooxEngineTypeParser.cs $HOME/Steam/steamapps/common/Resonite/Resonite_Data/Managed/
+        mv $GITHUB_WORKSPACE/script/FrooxEngineTypeParser.csproj $HOME/Steam/steamapps/common/Resonite/Resonite_Data/Managed/
 
     # Runs our custom cs file to generate the list.
     - name: Build Script
       id: generate-list
       run: |
+        cd $HOME/Steam/steamapps/common/Resonite/Resonite_Data/Managed/
         dotnet build
         dotnet run
+
+    # Moves our generated list into root of our repo.
+    - name: Move Output File
+      run: |
+        mv $HOME/Steam/steamapps/common/Resonite/Resonite_Data/Managed/ComponentList.txt $GITHUB_WORKSPACE
+        mv $HOME/Steam/steamapps/common/Resonite/Resonite_Data/Managed/ProtoFluxList.txt $GITHUB_WORKSPACE
+        cd $GITHUB_WORKSPACE
 
     # Commits the changes to the repo.
     - name: Commit
@@ -46,8 +52,8 @@ jobs:
         git config --local user.email "action@github.com"
         git config --local user.name "Component List"
         git pull origin main
-        git add lists/ComponentList.txt
-        git add lists/ProtofluxList.txt
+        git add ComponentList.txt
+        git add ProtofluxList.txt
         git commit -m "Automatic component list compile" || true
 
     # Pushes the changes to the repo.
