--- a/.github/workflows/generate-list.yml
+++ b/.github/workflows/generate-list.yml
@@ -25,27 +25,20 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v3
 
-    # Moves our custom cs file into the correct location.
-    # Why are we doing it like this? Simplifies the csproj file.
-    - name: Move Code
-      run: |
-        mv $GITHUB_WORKSPACE/FrooxEngineTypeParser.cs $HOME/Steam/steamapps/common/Resonite/Resonite_Data/Managed/
-        mv $GITHUB_WORKSPACE/FrooxEngineTypeParser.csproj $HOME/Steam/steamapps/common/Resonite/Resonite_Data/Managed/
-
     # Runs our custom cs file to generate the list.
     - name: Build Script
-      id: generate-list
       run: |
-        cd $HOME/Steam/steamapps/common/Resonite/Resonite_Data/Managed/
-        dotnet build
-        dotnet run output/
+        dotnet build -c Release
+        cd $GITHUB_WORKSPACE/bin/Release/net7.0/
+        ./FrooxEngineTypeParser.exe
 
     # Moves our generated list into root of our repo.
-    - name: Move Output File
-      run: |
-        mv $HOME/Steam/steamapps/common/Resonite/Resonite_Data/Managed/output/ComponentList.txt $GITHUB_WORKSPACE
-        mv $HOME/Steam/steamapps/common/Resonite/Resonite_Data/Managed/output/ProtoFluxList.txt $GITHUB_WORKSPACE
-        cd $GITHUB_WORKSPACE
+    # - name: Move Output File
+    #   run: |
+    #     cd $HOME/Steam/steamapps/common/Resonite/Resonite_Data/Managed/output
+    #     mv $HOME/Steam/steamapps/common/Resonite/Resonite_Data/Managed/output/ComponentList.txt $GITHUB_WORKSPACE
+    #     mv $HOME/Steam/steamapps/common/Resonite/Resonite_Data/Managed/output/ProtoFluxList.txt $GITHUB_WORKSPACE
+    #     cd $GITHUB_WORKSPACE
 
     # Commits the changes to the repo.
     - name: Commit
