--- a/.github/workflows/generate-list.yml
+++ b/.github/workflows/generate-list.yml
@@ -44,8 +44,8 @@ jobs:
     - name: Commit
       run: |
         git config --local user.email "action@github.com"
-        git config --local user.name "Component List"
-        git pull origin main
+        git config --local user.name "Updated Component Lists"
+        git pull origin ${{ github.ref_name }}
         git add ComponentList.txt
         git add ProtofluxList.txt
         git commit -m "Automatic component list compile" || true
