--- a/.github/workflows/generate-list.yml
+++ b/.github/workflows/generate-list.yml
@@ -5,8 +5,6 @@ on:
     - cron: "0 0 * * *"
   push:
   workflow_dispatch:
-env:
-  VERSION: NULL VERSION
 
 jobs:
   generate-component-list:
@@ -25,12 +23,11 @@ jobs:
       # Check for a Resonite cache
       run: steamcmd +force_install_dir $HOME/Steam/steamapps/common/Resonite +login ${{ secrets.PASSCODE }} +app_update 2519830 validate +quit
 
-    - name: Get Version ID
+    - name: Get VERSION ID
+      id: getversion
       run: |
         cd $HOME/Steam/steamapps/common/Resonite
-        VERSION=$(cat Build.version)
-        echo "VERSION=$VERSION" >> $GITHUB_ENV
-        echo ${{ env.VERSION }} works!
+        echo "::set-output name=version::$(cat Build.version)"
 
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it.
     - name: Checkout
@@ -59,7 +56,7 @@ jobs:
         git pull origin ${{ github.ref_name }}
         git add lists/ComponentList.txt
         git add lists/ProtoFluxList.txt
-        git commit -m "${{ env.VERSION }}" || true
+        git commit -m "${{ steps.getversion.outputs.version }}" || true
 
     # Pushes the changes to the repo.
     - name: Push changes
