--- a/.github/workflows/generate-list.yml
+++ b/.github/workflows/generate-list.yml
@@ -40,22 +40,20 @@ jobs:
         cd $GITHUB_WORKSPACE/bin/Release/net8.0/
         ./FrooxEngineTypeParser
 
-    # Moves our generated list into root of our repo.
-    # - name: Move Output File
-    #   run: |
-    #     cd $HOME/Steam/steamapps/common/Resonite/Resonite_Data/Managed/output
-    #     mv $HOME/Steam/steamapps/common/Resonite/Resonite_Data/Managed/output/ComponentList.txt $GITHUB_WORKSPACE
-    #     mv $HOME/Steam/steamapps/common/Resonite/Resonite_Data/Managed/output/ProtoFluxList.txt $GITHUB_WORKSPACE
-    #     cd $GITHUB_WORKSPACE
+    # Moves the Version file to github repo.
+    - name: Move Version File
+      run: |
+        mv $HOME/Steam/steamapps/common/Resonite/Build.version $GITHUB_WORKSPACE
 
     # Commits the changes to the repo.
     - name: Commit
       run: |
         git config --local user.email "action@github.com"
-        git config --local user.name "Updated Component Lists"
+        git config --local user.name "Updated Data"
         git pull origin ${{ github.ref_name }}
-        git add lists/ComponentList.txt
-        git add lists/ProtoFluxList.txt
+        git add data/ComponentList.txt
+        git add data/ProtoFluxList.txt
+        git add data/Build.version
         git commit -m "${{ steps.getversion.outputs.version }}" || true
 
     # Pushes the changes to the repo.
