--- a/.github/workflows/generate-list.yml
+++ b/.github/workflows/generate-list.yml
@@ -23,11 +23,17 @@ jobs:
       # Check for a Resonite cache
       run: steamcmd +force_install_dir $HOME/Steam/steamapps/common/Resonite +login ${{ secrets.PASSCODE }} +app_update 2519830 validate +quit
 
-    - name: Get VERSION ID
+    - name: Get VERSION IDs
       id: getversion
       run: |
         cd $HOME/Steam/steamapps/common/Resonite
         echo "version=$(cat Build.version)" >> $GITHUB_OUTPUT
+        echo "current_version=$(cat Build.version)" >> $GITHUB_OUTPUT
+
+    - name: Do we need to update?
+      run: |
+        cd $HOME/Steam/steamapps/common/Resonite
+        echo "should_update=${{steps.getversion.outputs.version == steps.getversion.outputs.current_version }}" >> $GITHUB_OUTPUT
 
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it.
     - name: Checkout
@@ -43,7 +49,7 @@ jobs:
     # Moves the Version file to github repo.
     - name: Move Version File
       run: |
-        mv $HOME/Steam/steamapps/common/Resonite/Build.version $GITHUB_WORKSPACE
+        mv $HOME/Steam/steamapps/common/Resonite/Build.version $GITHUB_WORKSPACE/data
 
     # Commits the changes to the repo.
     - name: Commit
