--- a/.github/workflows/generate-list.yml
+++ b/.github/workflows/generate-list.yml
@@ -34,6 +34,7 @@ jobs:
       run: |
         # Goto the Resonite directory.
         cd $HOME/Steam/steamapps/common/Resonite
+
         # Make some envrionment variables for our version IDs.
         echo "resonite_cached_version=$(cat $GITHUB_WORKSPACE/data/Build.version)" >> $GITHUB_ENV
         echo "resonite_latest_version=$(cat Build.version)" >> $GITHUB_ENV
@@ -48,22 +49,19 @@ jobs:
     - name: Check if update is required
       id: check_version
       run: |
-        should_update=$(if [ "${resonite_cached_version}" = "${resonite_latest_version}" ]; then printf 'false'; else printf 'true'; fi)
-        echo "::debug::should_update=$should_update"
-        if [ -w "${GITHUB_ENV}" ]; then
-          printf "should_update=%s\n" "${should_update}" >> "${GITHUB_ENV}"
+        if [ "$resonite_cached_version" != "$resonite_latest_version" ]; then
+          should_update="true"
         else
-          printf "Error: %s does not exist or is not writable\n" "${GITHUB_ENV}"
-          exit 1
+          should_update="false"
         fi
-        if [ "${should_update}" = "true" ]; then
-          if [ -w "${GITHUB_STEP_SUMMARY}" ]; then
-            printf 'Requires an update!\n' >> "${GITHUB_STEP_SUMMARY}"
-          else
-            printf "Error: %s does not exist or is not writable\n" "${GITHUB_STEP_SUMMARY}"
-            exit 1
-          fi
+
+        echo "should_update=$should_update" >> "$GITHUB_ENV"
+        echo "::debug::should_update=$should_update"
+
+        if [ "$should_update" = "true" ]; then
+          echo 'Requires an update!' >> "$GITHUB_STEP_SUMMARY"
         fi
+
         echo "::debug::GITHUB_ENV contents: $(cat "${GITHUB_ENV}")"
         echo "::debug::GITHUB_STEP_SUMMARY contents: $(cat "${GITHUB_STEP_SUMMARY}")"
 
@@ -71,19 +69,21 @@ jobs:
       run: "echo 'Should update: ${{ steps.check_version.outputs.should_update }}'"
 
     # Builds Resonite with our custom cs file and runs to generate our output files.
-    - name: Build and run our script.
+    - name: Build FrooxEngineTypeParser
       if: steps.check_version.outputs.should_update == 'true'
       run: |
         set -e
         cd $HOME/Steam/steamapps/common/Resonite
         dotnet build -c Release
-        cd $GITHUB_WORKSPACE
-        ./FrooxEngineTypeParser
 
-    # Moves the Version file to github repo.
-    - name: Update Version File
+    - name: Run FrooxEngineTypeParser and prepare the outputs
       if: steps.check_version.outputs.should_update == 'true'
-      run: mv $HOME/Steam/steamapps/common/Resonite/Build.version $GITHUB_WORKSPACE/data
+      run: |
+        set -e
+        $GITHUB_WORKSPACE/bin/Release/net8.0/FrooxEngineTypeParser
+
+        # Moves the Version file to github repo as that isn't handled by the script.
+        mv $HOME/Steam/steamapps/common/Resonite/Build.version $GITHUB_WORKSPACE/data
 
     # Commits the changes to the repo.
     - name: Apply changes
@@ -91,11 +91,14 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
+        # Set up git
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
         git pull origin ${{ github.ref_name }}
         git add data/ComponentList.txt
         git add data/ProtoFluxList.txt
         git add data/Build.version
+
+        # Commit Time!
         git commit -m "$resonite_latest_version" || true
         git push origin ${{ github.ref_name }}
