[skip-ci] boolean input

--- a/.github/workflows/generate-list.yml
+++ b/.github/workflows/generate-list.yml
@@ -7,9 +7,9 @@ on:
   workflow_dispatch:
     inputs:
       force_update:
+        type: boolean
         description: 'Force update the data'
         required: false
-        default: 'false'
 
 jobs:
   compile-resonite-data:
