--- a/.github/workflows/generate-list.yml
+++ b/.github/workflows/generate-list.yml
@@ -106,6 +106,7 @@ jobs:
         git add data/ComponentList.txt
         git add data/ProtoFluxList.txt
         git add data/MethodsList.txt
+        git add data/TypesList.txt
         git add data/Build.version
 
         # Commit Time!
